--- a/client/src/index.html
+++ b/client/src/index.html
@@ -8,6 +8,7 @@
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   <!-- PrimeFlex -->
   <link rel="stylesheet" href="https://unpkg.com/primeflex@latest/primeflex.css">
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0" />
 
 </head>
 <body>
